Antlr/GraphParser.py
# Generated from Graph.g4 by ANTLR 4.7
# encoding: utf-8
from antlr4 import *
from io import StringIO
from typing.io import TextIO
import sys



class GraphParser ( Parser ):

    grammarFileName = "Graph.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "'True'", "'False'", "'@run'", "'graph'", "'function'", 
                     "'return'", "'pass'", "'if'", "'else if'", "'else'", 
                     "'while'", "'for each'", "'ref'", "'='", "'or'", "'and'", 
                     "'not'", "'<'", "'>'", "'<='", "'>='", "'in'", "'not in'", 
                     "'is'", "'is not'", "'+'", "'-'", "'union'", "'intersect'", 
                     "'diff'", "'concat'", "'*'", "'/'", "'%'", "'^'", "'->'", 
                     "<INVALID>", "<INVALID>", "'('", "')'", "'['", "']'", 
                     "','", "'.'", "'..'", "':'", "' '" ]

    symbolicNames = [ "<INVALID>", "STRING", "INT", "FLOAT", "TRUE", "FALSE", 
                      "RUN", "GRAPH", "FUNCTION", "RETURN", "PASS", "IF", 
                      "ELSEIF", "ELSE", "WHILE", "FOREACH", "REF", "ASSIGN", 
                      "OR", "AND", "NOT", "LESS_THAN", "GREATER_THAN", "LESS_EQUAL", 
                      "GREATER_EQUAL", "IN", "NOT_IN", "IS", "IS_NOT", "PLUS", 
                      "MINUS", "UNION", "INTERSECT", "DIFF", "CONCAT", "TIMES", 
                      "DIVIDE", "MODULO", "POWER", "DIRECTED", "VAR_ID", 
                      "FUNC_ID", "OPEN_PAREN", "CLOSE_PAREN", "OPEN_SQ_BRACKET", 
                      "CLOSE_SQ_BRACKET", "COMMA", "DOT", "DOTDOT", "COLON", 
                      "SPACE", "SKIP_", "NEWLINE", "INDENT", "DEDENT" ]

    RULE_program = 0
    RULE_funcDef = 1
    RULE_formalParams = 2
    RULE_block = 3
    RULE_stmt = 4
    RULE_simpleStmt = 5
    RULE_assignment = 6
    RULE_compoundStmt = 7
    RULE_ifStmt = 8
    RULE_whileStmt = 9
    RULE_foreachStmt = 10
    RULE_graphAssignment = 11
    RULE_compOp = 12
    RULE_expr = 13
    RULE_setOp = 14
    RULE_factorOp = 15
    RULE_molecule = 16
    RULE_atom = 17
    RULE_funcCall = 18
    RULE_actualParams = 19
    RULE_listStruct = 20
    RULE_rangerStruct = 21
    RULE_graph = 22
    RULE_vertices = 23
    RULE_vertex = 24
    RULE_edges = 25
    RULE_edge = 26
    RULE_identifier = 27
    RULE_number = 28
    RULE_boolean = 29

    ruleNames =  [ "program", "funcDef", "formalParams", "block", "stmt", 
                   "simpleStmt", "assignment", "compoundStmt", "ifStmt", 
                   "whileStmt", "foreachStmt", "graphAssignment", "compOp", 
                   "expr", "setOp", "factorOp", "molecule", "atom", "funcCall", 
                   "actualParams", "listStruct", "rangerStruct", "graph", 
                   "vertices", "vertex", "edges", "edge", "identifier", 
                   "number", "boolean" ]

    EOF = Token.EOF
    STRING=1
    INT=2
    FLOAT=3
    TRUE=4
    FALSE=5
    RUN=6
    GRAPH=7
    FUNCTION=8
    RETURN=9
    PASS=10
    IF=11
    ELSEIF=12
    ELSE=13
    WHILE=14
    FOREACH=15
    REF=16
    ASSIGN=17
    OR=18
    AND=19
    NOT=20
    LESS_THAN=21
    GREATER_THAN=22
    LESS_EQUAL=23
    GREATER_EQUAL=24
    IN=25
    NOT_IN=26
    IS=27
    IS_NOT=28
    PLUS=29
    MINUS=30
    UNION=31
    INTERSECT=32
    DIFF=33
    CONCAT=34
    TIMES=35
    DIVIDE=36
    MODULO=37
    POWER=38
    DIRECTED=39
    VAR_ID=40
    FUNC_ID=41
    OPEN_PAREN=42
    CLOSE_PAREN=43
    OPEN_SQ_BRACKET=44
    CLOSE_SQ_BRACKET=45
    COMMA=46
    DOT=47
    DOTDOT=48
    COLON=49
    SPACE=50
    SKIP_=51
    NEWLINE=52
    INDENT=53
    DEDENT=54

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.7")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None



    class ProgramContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def RUN(self):
            return self.getToken(GraphParser.RUN, 0)

        def block(self):
            return self.getTypedRuleContext(GraphParser.BlockContext,0)


        def EOF(self):
            return self.getToken(GraphParser.EOF, 0)

        def NEWLINE(self):
            return self.getToken(GraphParser.NEWLINE, 0)

        def funcDef(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(GraphParser.FuncDefContext)
            else:
                return self.getTypedRuleContext(GraphParser.FuncDefContext,i)


        def getRuleIndex(self):
            return GraphParser.RULE_program

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterProgram" ):
                listener.enterProgram(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitProgram" ):
                listener.exitProgram(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitProgram" ):
                return visitor.visitProgram(self)
            else:
                return visitor.visitChildren(self)




    def program(self):

        localctx = GraphParser.ProgramContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_program)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 61
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==GraphParser.NEWLINE:
                self.state = 60
                self.match(GraphParser.NEWLINE)


            self.state = 66
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==GraphParser.FUNCTION:
                self.state = 63
                self.funcDef()
                self.state = 68
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 69
            self.match(GraphParser.RUN)
            self.state = 70
            self.block()
            self.state = 71
            self.match(GraphParser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class FuncDefContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def FUNCTION(self):
            return self.getToken(GraphParser.FUNCTION, 0)

        def SPACE(self):
            return self.getToken(GraphParser.SPACE, 0)

        def FUNC_ID(self):
            return self.getToken(GraphParser.FUNC_ID, 0)

        def OPEN_PAREN(self):
            return self.getToken(GraphParser.OPEN_PAREN, 0)

        def CLOSE_PAREN(self):
            return self.getToken(GraphParser.CLOSE_PAREN, 0)

        def block(self):
            return self.getTypedRuleContext(GraphParser.BlockContext,0)


        def formalParams(self):
            return self.getTypedRuleContext(GraphParser.FormalParamsContext,0)


        def getRuleIndex(self):
            return GraphParser.RULE_funcDef

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterFuncDef" ):
                listener.enterFuncDef(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitFuncDef" ):
                listener.exitFuncDef(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitFuncDef" ):
                return visitor.visitFuncDef(self)
            else:
                return visitor.visitChildren(self)




    def funcDef(self):

        localctx = GraphParser.FuncDefContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_funcDef)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 73
            self.match(GraphParser.FUNCTION)
            self.state = 74
            self.match(GraphParser.SPACE)
            self.state = 75
            self.match(GraphParser.FUNC_ID)
            self.state = 76
            self.match(GraphParser.OPEN_PAREN)
            self.state = 78
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==GraphParser.VAR_ID:
                self.state = 77
                self.formalParams()


            self.state = 80
            self.match(GraphParser.CLOSE_PAREN)
            self.state = 81
            self.block()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class FormalParamsContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def VAR_ID(self, i:int=None):
            if i is None:
                return self.getTokens(GraphParser.VAR_ID)
            else:
                return self.getToken(GraphParser.VAR_ID, i)

        def COMMA(self, i:int=None):
            if i is None:
                return self.getTokens(GraphParser.COMMA)
            else:
                return self.getToken(GraphParser.COMMA, i)

        def SPACE(self, i:int=None):
            if i is None:
                return self.getTokens(GraphParser.SPACE)
            else:
                return self.getToken(GraphParser.SPACE, i)

        def getRuleIndex(self):
            return GraphParser.RULE_formalParams

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterFormalParams" ):
                listener.enterFormalParams(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitFormalParams" ):
                listener.exitFormalParams(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitFormalParams" ):
                return visitor.visitFormalParams(self)
            else:
                return visitor.visitChildren(self)




    def formalParams(self):

        localctx = GraphParser.FormalParamsContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_formalParams)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 83
            self.match(GraphParser.VAR_ID)
            self.state = 89
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==GraphParser.COMMA:
                self.state = 84
                self.match(GraphParser.COMMA)
                self.state = 85
                self.match(GraphParser.SPACE)
                self.state = 86
                self.match(GraphParser.VAR_ID)
                self.state = 91
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class BlockContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def COLON(self):
            return self.getToken(GraphParser.COLON, 0)

        def NEWLINE(self):
            return self.getToken(GraphParser.NEWLINE, 0)

        def INDENT(self):
            return self.getToken(GraphParser.INDENT, 0)

        def DEDENT(self):
            return self.getToken(GraphParser.DEDENT, 0)

        def stmt(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(GraphParser.StmtContext)
            else:
                return self.getTypedRuleContext(GraphParser.StmtContext,i)


        def getRuleIndex(self):
            return GraphParser.RULE_block

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterBlock" ):
                listener.enterBlock(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitBlock" ):
                listener.exitBlock(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitBlock" ):
                return visitor.visitBlock(self)
            else:
                return visitor.visitChildren(self)




    def block(self):

        localctx = GraphParser.BlockContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_block)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 92
            self.match(GraphParser.COLON)
            self.state = 93
            self.match(GraphParser.NEWLINE)
            self.state = 94
            self.match(GraphParser.INDENT)
            self.state = 96 
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while True:
                self.state = 95
                self.stmt()
                self.state = 98 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if not ((((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << GraphParser.STRING) | (1 << GraphParser.INT) | (1 << GraphParser.FLOAT) | (1 << GraphParser.TRUE) | (1 << GraphParser.FALSE) | (1 << GraphParser.RETURN) | (1 << GraphParser.PASS) | (1 << GraphParser.IF) | (1 << GraphParser.WHILE) | (1 << GraphParser.FOREACH) | (1 << GraphParser.VAR_ID) | (1 << GraphParser.FUNC_ID) | (1 << GraphParser.OPEN_SQ_BRACKET))) != 0)):
                    break

            self.state = 100
            self.match(GraphParser.DEDENT)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class StmtContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def simpleStmt(self):
            return self.getTypedRuleContext(GraphParser.SimpleStmtContext,0)


        def NEWLINE(self):
            return self.getToken(GraphParser.NEWLINE, 0)

        def compoundStmt(self):
            return self.getTypedRuleContext(GraphParser.CompoundStmtContext,0)


        def getRuleIndex(self):
            return GraphParser.RULE_stmt

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterStmt" ):
                listener.enterStmt(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitStmt" ):
                listener.exitStmt(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitStmt" ):
                return visitor.visitStmt(self)
            else:
                return visitor.visitChildren(self)




    def stmt(self):

        localctx = GraphParser.StmtContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_stmt)
        try:
            self.state = 106
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,5,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 102
                self.simpleStmt()
                self.state = 103
                self.match(GraphParser.NEWLINE)
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 105
                self.compoundStmt()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class SimpleStmtContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def assignment(self):
            return self.getTypedRuleContext(GraphParser.AssignmentContext,0)


        def RETURN(self):
            return self.getToken(GraphParser.RETURN, 0)

        def SPACE(self):
            return self.getToken(GraphParser.SPACE, 0)

        def expr(self):
            return self.getTypedRuleContext(GraphParser.ExprContext,0)


        def PASS(self):
            return self.getToken(GraphParser.PASS, 0)

        def funcCall(self):
            return self.getTypedRuleContext(GraphParser.FuncCallContext,0)


        def getRuleIndex(self):
            return GraphParser.RULE_simpleStmt

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterSimpleStmt" ):
                listener.enterSimpleStmt(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitSimpleStmt" ):
                listener.exitSimpleStmt(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitSimpleStmt" ):
                return visitor.visitSimpleStmt(self)
            else:
                return visitor.visitChildren(self)




    def simpleStmt(self):

        localctx = GraphParser.SimpleStmtContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_simpleStmt)
        self._la = 0 # Token type
        try:
            self.state = 116
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,7,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 108
                self.assignment()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 109
                self.match(GraphParser.RETURN)
                self.state = 112
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if _la==GraphParser.SPACE:
                    self.state = 110
                    self.match(GraphParser.SPACE)
                    self.state = 111
                    self.expr(0)


                pass

            elif la_ == 3:
                self.enterOuterAlt(localctx, 3)
                self.state = 114
                self.match(GraphParser.PASS)
                pass

            elif la_ == 4:
                self.enterOuterAlt(localctx, 4)
                self.state = 115
                self.funcCall()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class AssignmentContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def molecule(self):
            return self.getTypedRuleContext(GraphParser.MoleculeContext,0)


        def SPACE(self, i:int=None):
            if i is None:
                return self.getTokens(GraphParser.SPACE)
            else:
                return self.getToken(GraphParser.SPACE, i)

        def ASSIGN(self):
            return self.getToken(GraphParser.ASSIGN, 0)

        def expr(self):
            return self.getTypedRuleContext(GraphParser.ExprContext,0)


        def getRuleIndex(self):
            return GraphParser.RULE_assignment

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterAssignment" ):
                listener.enterAssignment(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitAssignment" ):
                listener.exitAssignment(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitAssignment" ):
                return visitor.visitAssignment(self)
            else:
                return visitor.visitChildren(self)




    def assignment(self):

        localctx = GraphParser.AssignmentContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_assignment)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 118
            self.molecule()
            self.state = 119
            self.match(GraphParser.SPACE)
            self.state = 120
            self.match(GraphParser.ASSIGN)
            self.state = 121
            self.match(GraphParser.SPACE)
            self.state = 124
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,8,self._ctx)
            if la_ == 1:
                self.state = 122
                self.expr(0)
                pass

            elif la_ == 2:
                self.state = 123
                self.expr(0)
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class CompoundStmtContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ifStmt(self):
            return self.getTypedRuleContext(GraphParser.IfStmtContext,0)


        def whileStmt(self):
            return self.getTypedRuleContext(GraphParser.WhileStmtContext,0)


        def foreachStmt(self):
            return self.getTypedRuleContext(GraphParser.ForeachStmtContext,0)


        def graphAssignment(self):
            return self.getTypedRuleContext(GraphParser.GraphAssignmentContext,0)


        def getRuleIndex(self):
            return GraphParser.RULE_compoundStmt

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterCompoundStmt" ):
                listener.enterCompoundStmt(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitCompoundStmt" ):
                listener.exitCompoundStmt(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitCompoundStmt" ):
                return visitor.visitCompoundStmt(self)
            else:
                return visitor.visitChildren(self)




    def compoundStmt(self):

        localctx = GraphParser.CompoundStmtContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_compoundStmt)
        try:
            self.state = 130
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [GraphParser.IF]:
                self.enterOuterAlt(localctx, 1)
                self.state = 126
                self.ifStmt()
                pass
            elif token in [GraphParser.WHILE]:
                self.enterOuterAlt(localctx, 2)
                self.state = 127
                self.whileStmt()
                pass
            elif token in [GraphParser.FOREACH]:
                self.enterOuterAlt(localctx, 3)
                self.state = 128
                self.foreachStmt()
                pass
            elif token in [GraphParser.VAR_ID]:
                self.enterOuterAlt(localctx, 4)
                self.state = 129
                self.graphAssignment()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class IfStmtContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def IF(self):
            return self.getToken(GraphParser.IF, 0)

        def SPACE(self, i:int=None):
            if i is None:
                return self.getTokens(GraphParser.SPACE)
            else:
                return self.getToken(GraphParser.SPACE, i)

        def expr(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(GraphParser.ExprContext)
            else:
                return self.getTypedRuleContext(GraphParser.ExprContext,i)


        def block(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(GraphParser.BlockContext)
            else:
                return self.getTypedRuleContext(GraphParser.BlockContext,i)


        def ELSEIF(self, i:int=None):
            if i is None:
                return self.getTokens(GraphParser.ELSEIF)
            else:
                return self.getToken(GraphParser.ELSEIF, i)

        def ELSE(self):
            return self.getToken(GraphParser.ELSE, 0)

        def getRuleIndex(self):
            return GraphParser.RULE_ifStmt

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterIfStmt" ):
                listener.enterIfStmt(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitIfStmt" ):
                listener.exitIfStmt(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitIfStmt" ):
                return visitor.visitIfStmt(self)
            else:
                return visitor.visitChildren(self)




    def ifStmt(self):
